
2022-12-18  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_validate_labels): don't warn on GO TO own SECTION

2022-12-17  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c: initial support for PIC U, for now handled as alphanumeric with
	  size * 4
	* scanner.l: minimal parsing for utf-8 literals
	* reserved.c, cobc.h (CB_CS_USAGE), parser.y: parsing for USAGE UTF-8
	  and the related BYTE-LENGTH clause
	* field.c, tree.c, typeck.c: minimal adjustments for PIC U

2022-12-16  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h (cb_binary_op, cb_binary_op_flag, cb_binary_op_op): changed struct
	  cb_binary_op to use new enums for the operation and for "special flags"
	* tree.h (BOP_OPERANDS_SWAPPED), codegen.c (output_cond), typeck.c
	  (cb_build_cond, swap_condition_operands): store flag when swap operation
	  is done and swap the result for return values as used in SEARCH ALL later
	* codegen.c (output_long_integer): reduce scope of variables as done
	  in (output_integer)
	* codegen.c (output_assign, output_if, output_debug_item): extracted
	  from output_stmt
	* typeck.c (cb_emit, cb_emit_list): changed from defines to inline
	  functions, now returning the tree that was emitted

2022-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_to_value): fix bad generation for VALUE size
	  greater than field size, see bug #777
	* flag.def, typeck.c: new option "fast-compare" (cb_flag_fast_compare,
	  defaulting to on) to disable old and new optimizations
	* cobc.c: disable cb_flag_fast_compare for -fsyntax-only and on compiler
	  errors to improve parsing time
	* tree.c (cb_fits_int, cb_fits_long_long): constant ZERO fits both
	  integer types
	* tree.c (cb_field_size): return FIELD_SIZE_UNKNOWN for constants and
	  fields with ANY LENGTH
	* typeck.c (cb_build_cond_default, cb_build_cond_fields): extracted
	  from cb_build_cond
	* typeck.c (swap_condition_operands): added and executed in cb_build_cond
	  if left side is constant or literal